Changelog for s6-portable-utils.

In 2.2.5.1
----------

 - Bugfixes.
 - Adaptation to skalibs-2.13.0.0.


In 2.2.5.0
----------

 - Adaptation to skalibs-2.12.0.0.


In 2.2.4.0
----------

 - New -N option to s6-dumpenv, for chomping retrieval.


In 2.2.3.4
----------

 - Bugfixes.


In 2.2.3.3
----------

 - Adaptation to skalibs-2.11.0.0.


In 2.2.3.2
----------

 - Bugfixes.


In 2.2.3.1
----------

 - Version that works with skalibs-2.10.0.0.


In 2.2.3.0
----------

 - Bugfixes that have nothing to do with 2.2.2.4 but that
were reported *right after* 2.2.2.4 was released, because
things do be like that
 - New binary: s6-tai64ndiff


In 2.2.2.4
----------

 - Bugfixes of the bugs introduced in the previous bugfixes
(that's what all software development is about, isn't it?)


In 2.2.2.3
----------

 - Bugfixes.


In 2.2.2.2
----------

 - Bugfixes.


In 2.2.2.1
----------

 - Bugfixes.


In 2.2.2.0
----------

 - Adaptation to skalibs-2.9.0.0.


In 2.2.1.3
----------

 - s6-ln doesn't use potentially blocking random anymore, so it's
usable in early boot. This needs skalibs-2.8.0.0, however.
 - Everything now builds as PIC by default.


In 2.2.1.2
----------

 - Adaptation to skalibs-2.7.0.0.


In 2.2.1.1
----------

 - Bugfix release.
 - Adaptation to skalibs-2.6.0.0.


In 2.2.1.0
----------

 - s6-ln now accepts the non-standard -n option, with a meaning
similar to the one in GNU ln. This is used to atomically update
symbolic links to directories.


In 2.2.0.0
----------

 - Added this NEWS file. :)
 - Major types overhaul to make them more POSIXly correct:
compatibility with skalibs-2.5.0.0.
