@@ -163,7 +163,6 @@ the previous versions of s6-portable-utils and the current one. </li>
  <li> The <a href="s6-sync.html"><tt>s6-sync</tt></a> program </li>
  <li> The <a href="s6-tai64ndiff.html"><tt>s6-tai64ndiff</tt></a> program </li>
  <li> The <a href="s6-tail.html"><tt>s6-tail</tt></a> program </li>
- <li> The <a href="s6-test.html"><tt>s6-test</tt></a> program </li>
  <li> The <a href="s6-touch.html"><tt>s6-touch</tt></a> program </li>
  <li> The <a href="s6-true.html"><tt>s6-true</tt></a> program </li>
  <li> The <a href="s6-uniquename.html"><tt>s6-uniquename</tt></a> program </li>
