@@ -72,5 +72,15 @@ in order to match whole strings, you must anchor <em>pattern</em> with
 <tt>^</tt> and <tt>$</tt> markers. </li>
 </ul>
 
+<h2> Notes </h2>
+
+<ul>
+ <li> <strong>This program is deprecated.</strong> It will disappear in a
+near future version of s6-portable-utils. You are encouraged to use
+<a href="https://skarnet.org/software/execline/eltest.html">eltest</a>
+instead, which has the same interface and functionality, and is a part of the
+<a href="https://skarnet.org/software/execline/">execline</a> package. </li>
+</ul>
+
 </body>
 </html>
