@@ -5,6 +5,7 @@ In 2.2.5.1
 
  - Bugfixes.
  - Adaptation to skalibs-2.13.0.0.
+ - s6-test is now deprecated: replaced with execline's eltest.
 
 
 In 2.2.5.0
